syntax = "proto3";

package notification;

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
  string message = 1;
}

message NotificationResponse {
  bool success = 1;
}
